--- a/src/css/tools.css
+++ b/src/css/tools.css
@@ -6,3 +6,13 @@
   -o-user-select:none;
   user-select:none;
 }
+
+/* 清除浮动 */
+.clearfix::before, .clearfix::after {
+  content: "";
+  display: table;
+}
+
+.clearfix::after {
+  clear: both;
+}
