--- a/src/css/tools.css
+++ b/src/css/tools.css
@@ -7,6 +7,7 @@
   user-select:none;
 }
 
+
 /* 清除浮动 */
 .clearfix::before, .clearfix::after {
   content: "";
@@ -15,4 +16,19 @@
 
 .clearfix::after {
   clear: both;
+}
+
+
+/* 强制不换行 */
+.wn {
+  word-wrap:normal;
+  white-space:nowrap;
+}
+
+
+/* 强制换行 */
+.wb {
+  white-space:normal;
+  word-wrap:break-word;
+  word-break:break-all;
 }
