--- a/src/css/tools.css
+++ b/src/css/tools.css
@@ -32,3 +32,20 @@
   word-wrap:break-word;
   word-break:break-all;
 }
+
+/* 单行文本溢出显示省略号 */
+.single-line-text-overflow {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+/* 多行文本溢出显示省略号 */
+.multiple-lines-text-overflow {
+  display: -webkit-box;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: normal;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
